--- a/index.html
+++ b/index.html
@@ -30,8 +30,15 @@
                 </div>
                 
                 <div id="password-buttons">
-                    <button class="generated-password-btn" id="password-one" onclick="copyPasswordOne()"></button>
-                    <button class="generated-password-btn" id="password-two" onclick="copyPasswordTwo()"></button>
+                    <div>
+                        <p class="alternative-text">Alternative one:</p>
+                        <button class="generated-password-btn" id="password-one" onclick="copyPasswordOne()"></button>
+                    </div>
+                    <div>
+                        <p class="alternative-text-two">Alternative two:</p>
+                        <button class="generated-password-btn" id="password-two" onclick="copyPasswordTwo()"></button>
+                    </div>
+                    
                 </div>
             </div>
 
